# nowlii

./: .gitattributes  .gitignore  CLAUDE.md
nowli-backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  nowlii  pyproject.toml
nowli-backend/Apps/insights/: ai_client.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
nowli-backend/Apps/insights/migrations/: 0001_initial.py
nowli-backend/Apps/quests/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nowli-backend/Apps/quests/migrations/: 0001_initial.py  0002_alter_quests_due_time.py  0002_remove_quests_due_date.py  0003_quests_user.py  0004_rename_is_complete_subtasks_task_done_and_more.py  0005_merge_20260406_2317.py  0006_rename_due_time_quests_select_a_time.py
nowli-backend/Apps/subscriptions/: admin.py  apps.py  config.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
nowli-backend/Apps/subscriptions/migrations/: 0001_initial.py
nowli-backend/Apps/subtask_generator/: apps.py  serializers.py  urls.py  views.py
nowli-backend/Apps/support/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nowli-backend/Apps/support/migrations/: 0001_initial.py
nowli-backend/Apps/users/: models.py  serializers.py  urls.py  views.py
nowli-backend/Apps/users/migrations/: 0001_initial.py  (+12 more)
nowli-backend/Apps/voice_calls/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nowli-backend/core/: exceptions.py  middleware.py  settings.py  urls.py
(+203 files in other folders)
